--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "konva": "^8.3.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-konva": "^18.2.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
