--- a/package.json
+++ b/package.json
@@ -13,16 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "konva": "^8.3.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-konva": "^18.2.1",
-    "styled-components": "^5.3.5"
+    "jquery": "^3.6.0",
+    "konva": "^8.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
-    "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.5",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
